2002-09-22  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (clip_rgb_percent): fix bug. stoopid math...

2002-09-19  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_ellipse): Ellipses work ok
	(rsvg_start_tspan): Start of tspan work. Needs to handle x offset
	
2002-09-18  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_color_parse) : use bsearch instead of GHashTable. Potentially faster, 
	you don't leak GHashTable, no need to alloc and free 2 GStrings, and it *actually works here*

2002-09-17  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_text_handler_characters): Handle scaling font by affine/viewbox
	(rsvg_start_rect): Correct for bug in border drawing around a rect
	
2002-09-17  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_svg): Parse viewbox as floats, not ints.
	(rsvg_start_text): Handle x & y attributes. TODO: dx,dy
	
2002-09-16  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_svg): Support the viewbox
	
2002-09-15  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (): Use g_ascii_strtod instead of atof, strtod, g_strtod
	* rsvg-css.c (): ditto
	
2002-09-15  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_parse_style_attrs): Support styles in the form of fill="color" in addition to style="fill:color"
	(rsvg_is_style_arg): Helper fn for above
	(rsvg_parse_style_pair): Ditto
	
2002-09-14  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_image): draw raster images 

2002-09-14  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_element): Support for more tags
	(rsvg_start_ellipse): draw ellipses (buggy - ellipses are off-center)
	(rsvg_start_circle): draw circles
	(rsvg_start_rect): draw rectangles
	(rsvg_start_line): draw lines
	(rsvg_start_image): eventually will draw images (todo)
	(rsvg_start_polyline): draw polylines
	(rsvg_start_polygon): draw polygons
	(rsvg_start_any_poly): helper fn for polyline|polygon
	(rsvg_make_poly_point_list): ditto
	
2002-09-13  Dom Lachowicz <doml@appligent.com>
