@@ -61,6 +61,16 @@ AC_SUBST(LIBRSVG_CFLAGS)
 
 dnl ===========================================================================
 
+PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12,,
+                  AC_MSG_ERROR([GTK+-2.0 is required to compile gtk-engines]))
+
+GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
+AC_SUBST(GTK_VERSION)
+
+dnl ===========================================================================
+
 AC_CHECK_LIB(popt, poptParseArgvString, [POPT_LIBS="-lpopt"],
 AC_MSG_ERROR([popt 1.5 or newer is required to build librsvg.
 You can download the latest version from ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/]))
@@ -116,4 +126,6 @@ AC_OUTPUT([
 librsvg.spec
 librsvg-features.h
 Makefile
-librsvg-2.0.pc])
+librsvg-2.0.pc
+gtk-engine/Makefile
+])
