@@ -1,4 +1,4 @@
-INCLUDES = $(GTK_CFLAGS)
+INCLUDES = $(GTK_CFLAGS) $(LIBRSVG_CFLAGS)
 
 enginedir = $(libdir)/gtk-2.0/$(GTK_VERSION)/engines
 
@@ -14,7 +14,7 @@ libsvg_la_SOURCES = 		\
 	svg.h
 
 libsvg_la_LDFLAGS =  -avoid-version -module
-libsvg_la_LIBADD = $(GTK_LIBS)
+libsvg_la_LIBADD = $(GTK_LIBS) $(LIBRSVG_LIBS)
 
 dist-hook:
 	cp -pr examples $(distdir);					\
