@@ -26,19 +26,24 @@
 #include "svg-rc-style.h"
 #include <gmodule.h>
 
-G_MODULE_EXPORT void
+G_MODULE_EXPORT const gchar* g_module_check_init (GModule *module);
+G_MODULE_EXPORT void theme_init (GTypeModule *module);
+G_MODULE_EXPORT void theme_exit (void);
+G_MODULE_EXPORT GtkRcStyle * theme_create_rc_style (void);
+
+void
 theme_init (GTypeModule *module)
 {
   rsvg_rc_style_register_type (module);
   rsvg_style_register_type (module);
 }
 
-G_MODULE_EXPORT void
+void
 theme_exit (void)
 {
 }
 
-G_MODULE_EXPORT GtkRcStyle *
+GtkRcStyle *
 theme_create_rc_style (void)
 {
   return GTK_RC_STYLE (g_object_new (RSVG_TYPE_RC_STYLE, NULL));  
@@ -48,7 +53,6 @@ theme_create_rc_style (void)
  * is loaded and checks to see if we are compatible with the
  * version of GTK+ that loads us.
  */
-G_MODULE_EXPORT const gchar* g_module_check_init (GModule *module);
 const gchar*
 g_module_check_init (GModule *module)
 {
