@@ -1,3 +1,7 @@
+2002-09-25  Dom Lachowicz <doml@appligent.com>
+
+	* (): Import and create a SVG based GTK+ theme engine
+
 2002-09-22  Dom Lachowicz <doml@appligent.com>
 
 	* rsvg-css.c (clip_rgb_percent): fix bug. stoopid math...
